--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@portabletext/react": "^3.0.11",
     "@sanity/client": "^6.8.6",
+    "@studio-freight/react-lenis": "^0.0.45",
     "@styled-jsx/plugin-sass": "^4.0.2",
     "@types/js-cookie": "^3.0.3",
     "@types/lodash.throttle": "^4.1.7",
