--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@mux/mux-player-react": "^2.3.3",
     "@portabletext/react": "^3.0.11",
     "@sanity/client": "^6.8.6",
     "@studio-freight/react-lenis": "^0.0.45",
