--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "react-datocms": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.0",
+    "react-spinners": "^0.13.8",
     "sass": "^1.56.1",
     "sharp": "^0.32.4",
     "styled-components": "^5.3.3"
