--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mux/mux-player-react": "^2.3.3",
+    "@next/third-parties": "^14.2.1",
     "@portabletext/react": "^3.0.11",
     "@sanity/client": "^6.8.6",
     "@studio-freight/react-lenis": "^0.0.45",
