--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,17 +14,21 @@
     "@mux/mux-player-react": "^2.3.3",
     "@next/third-parties": "^14.2.1",
     "@portabletext/react": "^3.0.11",
+    "@react-spring/three": "^9.7.3",
+    "@react-three/drei": "^9.105.6",
+    "@react-three/fiber": "^8.16.3",
     "@sanity/client": "^6.8.6",
     "@studio-freight/react-lenis": "^0.0.45",
     "@styled-jsx/plugin-sass": "^4.0.2",
     "@types/js-cookie": "^3.0.3",
     "@types/lodash.throttle": "^4.1.7",
     "@types/styled-components": "^5.1.26",
+    "@types/three": "0.150.0",
     "babel-plugin-styled-components": "^2.0.5",
     "base-64": "^1.0.0",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
-    "framer-motion": "^8.4.6",
+    "framer-motion": "^11.1.8",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "html-react-parser": "^1.4.3",
@@ -40,8 +44,10 @@
     "react-intersection-observer": "^9.4.0",
     "react-spinners": "^0.13.8",
     "sass": "^1.56.1",
+    "shadergradient": "^1.2.11",
     "sharp": "^0.32.4",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "three": "0.150.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
