--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mux/mux-player-react": "^2.3.3",
+    "@next/bundle-analyzer": "^15.4.6",
     "@next/third-parties": "^14.2.1",
     "@portabletext/react": "^3.0.11",
     "@react-three/drei": "^9.105.6",
